<resources>
    <string name="app_name">Hamro Service</string>
    <string name="choose_lang">Choose Your Language</string>
    <string name="select_lang_to_start">Select a language to start</string>
    <string name="continue_btn">Continue</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_using">Login using</string>
    <string name="already_have_account">Already have account</string>
    <string name="register_using">Register using</string>
    <string name="name">name</string>
    <string name="navigation_drawer_open">Drawer is opened</string>
    <string name="navigation_drawer_close">Drawer is closed</string>
    <string name="unknown">Unknown</string>
    <string name="services">Services</string>
    <string name="call_now">Call Now</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
</resources>